[gd_scene load_steps=27 format=3 uid="uid://dewv6fxpunnsh"]

[ext_resource type="Script" path="res://FireGame/Scripts/PlayerController.gd" id="1_c6uwv"]
[ext_resource type="Resource" uid="uid://b8geera0ncwfd" path="res://FireGame/Resources/BaseStats.tres" id="2_j5e8m"]
[ext_resource type="Resource" uid="uid://dm6cijjwiulkc" path="res://FireGame/Resources/size1.tres" id="3_dj8q6"]
[ext_resource type="Script" path="res://FireGame/Scripts/Fire Creator.gd" id="3_f7p2t"]
[ext_resource type="Resource" uid="uid://q2mtvke3dupn" path="res://FireGame/Resources/size2.tres" id="4_e2njk"]
[ext_resource type="Shader" path="res://FireGame/Scenes/playerFireParticles.gdshader" id="4_rs1vc"]
[ext_resource type="Texture2D" uid="uid://bytvftw8fturs" path="res://FireGame/Tilesets/Fire2.png" id="4_xlgro"]
[ext_resource type="Resource" uid="uid://byrtsn2gg020k" path="res://FireGame/Resources/size3.tres" id="5_c878w"]
[ext_resource type="Script" path="res://FireGame/Scripts/PlayerCollisions.gd" id="6_8kpev"]
[ext_resource type="Script" path="res://FireGame/Scripts/PlayerState.gd" id="6_dsevx"]
[ext_resource type="Script" path="res://FireGame/Scripts/Dissolve_Sprite.gd" id="8_bh0m2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h0gxi"]
resource_local_to_scene = true
shader = ExtResource("4_rs1vc")
shader_parameter/density = 0.0
shader_parameter/pixelation_factor = 1
shader_parameter/randomv2 = 0.005

[sub_resource type="CircleShape2D" id="CircleShape2D_uen1t"]
radius = 9.0

[sub_resource type="Gradient" id="Gradient_0xw3q"]
interpolation_mode = 2
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p1pyn"]
gradient = SubResource("Gradient_0xw3q")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Animation" id="Animation_8ubom"]
resource_name = "FireWobble"
length = 0.8
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireAimPoint:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.00727594, -0.25, 0, 0.1, 0.252157, -2.07302, -0.1, 0.126079, 0.1, -0.126079, 0, -0.1, 0.133355, 0.1, 0.00727594, 2, -0.1, -0.164583, 0.1, -0.164583, 0, -0.1, 0.00727594, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireAimPoint:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(-12, -0.25, 0, 0.1, 0.218921, -10.079, -0.1, -0.189118, 0.1, 0.425297, -8, -0.1, 0.00127983, 0.1, -0.061759, -10, -0.1, 0.1101, 0.1, -0.0790176, -12, -0.1, 0.28196, 0.1, -0.0332375),
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8)
}

[sub_resource type="Animation" id="Animation_8fgju"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireAimPoint:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-6, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireAimPoint:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-10, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0nvj5"]
_data = {
"FireWobble": SubResource("Animation_8ubom"),
"RESET": SubResource("Animation_8fgju")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k3ohx"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(600, 100, 100)
velocity_pivot = Vector3(0, 1, 0)
direction = Vector3(0, 1, 0)
spread = 10.0
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 10, 0)
collision_mode = 2

[sub_resource type="Gradient" id="Gradient_y6f2v"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.0991776, 0.657236, 0.709674, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kloie"]
gradient = SubResource("Gradient_y6f2v")
width = 1
height = 1
fill_to = Vector2(0, 1)

[sub_resource type="Curve" id="Curve_5uq8v"]
_data = [Vector2(0, 0.559699), 0.0, 0.0, 0, 0, Vector2(0.230986, 1), 0.0, 0.0, 0, 0, Vector2(0.670422, 1), 0.0, 0.0, 0, 0, Vector2(0.861972, 0.590831), -2.66432, -2.66432, 0, 0, Vector2(1, 0), -4.28051, 0.0, 1, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_n1ehe"]
curve = SubResource("Curve_5uq8v")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ae2yu"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 10.0
inherit_velocity_ratio = 1.0
direction = Vector3(0, -1, 0)
spread = 90.0
initial_velocity_min = 40.0
initial_velocity_max = 50.0
gravity = Vector3(0, -300, 0)
damping_min = 300.0
damping_max = 300.0
scale_min = 0.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_n1ehe")

[sub_resource type="Gradient" id="Gradient_hy80r"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r7d7d"]
gradient = SubResource("Gradient_hy80r")
width = 2
height = 2

[node name="Player" type="CharacterBody2D" groups=["player"]]
floor_snap_length = 10.0
script = ExtResource("1_c6uwv")

[node name="PlayerState" type="Node" parent="."]
script = ExtResource("6_dsevx")
movement_datas = Array[Resource("res://FireGame/Scripts/PlayerMovementData.gd")]([ExtResource("2_j5e8m"), ExtResource("3_dj8q6"), ExtResource("4_e2njk"), ExtResource("5_c878w")])

[node name="PlayerCollisions" type="Node" parent="."]
script = ExtResource("6_8kpev")

[node name="PlayerSpriteManager" type="Sprite2D" parent="."]
z_index = 5
material = SubResource("ShaderMaterial_h0gxi")
position = Vector2(0, -10)
texture = ExtResource("4_xlgro")
script = ExtResource("8_bh0m2")

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_uen1t")

[node name="PlayerLight" type="PointLight2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(759.375, 759.375)
color = Color(0.925161, 0.880584, 0.878774, 1)
energy = 0.7
texture = SubResource("GradientTexture2D_p1pyn")
texture_scale = 0.01

[node name="FireAimPointAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0nvj5")
}
autoplay = "FireWobble"

[node name="FireAimPoint" type="Marker2D" parent="."]
position = Vector2(-6, -10)

[node name="FireRoot" type="Node" parent="."]

[node name="Fire Parent" type="Node2D" parent="FireRoot"]
position = Vector2(0, -10)
script = ExtResource("3_f7p2t")

[node name="PlayerRainSystem" type="Node2D" parent="."]

[node name="Rain" type="GPUParticles2D" parent="PlayerRainSystem"]
z_index = -4
position = Vector2(0, -300)
amount = 4000
process_material = SubResource("ParticleProcessMaterial_k3ohx")
texture = SubResource("GradientTexture2D_kloie")
lifetime = 4.0
collision_base_size = 10.0
visibility_rect = Rect2(-50, 0, 100, 300)
trail_enabled = true
trail_lifetime = 0.1
trail_sections = 2
trail_section_subdivisions = 1

[node name="RayCast2D" type="RayCast2D" parent="PlayerRainSystem"]
position = Vector2(0, -10)
target_position = Vector2(0, -1000)

[node name="Steam" type="GPUParticles2D" parent="PlayerRainSystem"]
position = Vector2(0, -10)
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_ae2yu")
texture = SubResource("GradientTexture2D_r7d7d")
